--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 <body>
     <h1>Hola estamos aprendiendo GIT</h1>
     <h2>Desarrollo web</h2>
+
+    <footer>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
